--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,7 @@ publishDir = "../co-relab.github.io"
   [params.intro.news] #did some heavy editing of params/intro.html to add this section
     enable = true
     title = "Announcements"
-    description = "&bull; Justin Mah will be joining the lab in May<br>&bull; Last submitted manuscript that we participated in was for the Psych Science Accelerator: https://psyarxiv.com/785qu/"
+    description = "&bull; Justin Mah will be joining the lab as intern in May<br>&bull; Last submitted manuscript that we participated in was for the Psych Science Accelerator: https://psyarxiv.com/785qu/<br>&bull; Armel Soubeiga will be joining the lab as an intern in May"
 # Above description is less tidy than the rest because I hacked it in to the intro. Will try to tidy it later.
 
   [params.intro.video]
@@ -127,10 +127,30 @@ publishDir = "../co-relab.github.io"
       title = "Many Labs 1"
       subtitle = "36 labs replicated 13 classic psychology studies to investigate cultural and contextual predictors of replicability."
       url = "https://osf.io/wx7ck/"
+      
+    [[params.work.row]]
+      img = "transparency.jpg"
+      alt = "Transparency Image"
+      title = "Transparency Guide"
+      subtitle = "One of our researchers participated in a collaboration to write a practical guide for more transparent science."
+      url = "https://psyarxiv.com/rtygm"
+      
+      [[params.work.row]]
+      img = "oxford.jpeg"
+      alt = "Oxford Image"
+      title = "Oxford Bibliography Guide"
+      subtitle = "Two of our researchers participated in a collaboration to write an Oxford Bibliography on replication initiatives in psychology."
+      url = "https://psyarxiv.com/rtygm"
+      
+      [[params.work.row]]
+      img = "SVO.jpeg"
+      alt = "SVO Image"
+      title = "Replication Attachment-Social Value Orientation"
+      subtitle = "One of our researchers conducted a (failed) replication of a famous finding in the literature (showing a relation between attachment security and Social Value Orientation)."
+      url = "https://psyarxiv.com/rtygm"
 
   # Testimonials section
   # I edited partials/testimonials.html to remove the quotes and change this to a friends-of-lab section.
-  # TO RICK: Can you edit this so that the urls work?
   [params.testimonials]
     enable = true
     title = "Friends of the lab"
@@ -224,7 +244,7 @@ publishDir = "../co-relab.github.io"
   [params.services]
     enable = true
     title = "Opportunities/Openings"
-    description = "We usually have various opportunities to work with/in the lab. Read about those below, and get in touch if you want to learn more. We work in English, but we also invite French (or other) speakers who want to improve their English."
+    description = "We sometimes have job openings at the lab. In the meantime, if you are interested in working with us, there are various grants you can receive and where we can support you in writing. We have posted some of these below and will update as we learn about more. We work in English, but we also invite French (or other) speakers who want to improve their English."
 
     [[params.services.item]]
       title = "Internships"
@@ -232,19 +252,11 @@ publishDir = "../co-relab.github.io"
       icon = "icon-graduation"
 
     [[params.services.item]]
-      title = '<a href = "">PhD/Masters Grant 1</a>'
-      description = "Placeholder for now. Grant will be described here. Just be aware that for some reason the length of this description sometimes messes up the formatting. I think it has more problems with very short descriptions."
+      title = '<a href = "">Postdoc Grant - Marie Curie</a>'
+      description = "The Marie Curie grant is an excellent opportunity for scholars outside of France wanting to come to France. Deadline for this call is September 12, 2018"
       icon = "icon-graduation"
+      link = "https://ec.europa.eu/research/mariecurieactions/actions/get-funding_en"
       
-    [[params.services.item]]
-      title = '<a href = "">Post-Doc Grant 1</a>'
-      description = "Placeholder for now. Grant will be described here. Just be aware that for some reason the length of this description sometimes messes up the formatting. I think it has more problems with very short descriptions."
-      icon = "icon-graduation"
-
-      [[params.services.item]]
-      title = '<a href = "">Post-Doc Grant 2</a>'
-      description = "Placeholder for now. Grant will be described here. Just be aware that for some reason the length of this description sometimes messes up the formatting. I think it has more problems with very short descriptions."
-      icon = "icon-graduation"
 
   # About section
   [params.about]
@@ -332,7 +344,7 @@ publishDir = "../co-relab.github.io"
     map = true
     form = true
     title = "Get in touch"
-    description = "Always open to questions/comments/collaborations. If you're interested in a position in the lab, please include: <br><li>The grant/opportunity you're interested in.</li><li>Current academic/professional status.</li><li>A brief comment about open science.</li>"
+    description = "If you're interested in a position in the lab, contact us! In your contact request, please include why you are interested in working on concepts related to thermoregulation/co-regulation. Please also include: </li><li>Which opportunity (e.g., grant) you're interested in.</li><li>Current academic/professional status.</li><li>A brief statement about your commitment to open science.</li>"
     
     # Available icons: http://simplelineicons.com/
     details = [
