--- a/config.toml
+++ b/config.toml
@@ -136,108 +136,97 @@ publishDir = "../co-relab.github.io"
       url = "https://psyarxiv.com/rtygm"
       
       [[params.work.row]]
-      img = "oxford.jpeg"
+      img = "oxford.jpg"
       alt = "Oxford Image"
       title = "Oxford Bibliography Guide"
       subtitle = "Two of our researchers participated in a collaboration to write an Oxford Bibliography on replication initiatives in psychology."
       url = "https://psyarxiv.com/rtygm"
       
       [[params.work.row]]
-      img = "SVO.jpeg"
+      img = "SVO.jpg"
       alt = "SVO Image"
       title = "Replication Attachment-Social Value Orientation"
       subtitle = "One of our researchers conducted a (failed) replication of a famous finding in the literature (showing a relation between attachment security and Social Value Orientation)."
       url = "https://psyarxiv.com/rtygm"
 
-  # Testimonials section
-  # I edited partials/testimonials.html to remove the quotes and change this to a friends-of-lab section.
-  [params.testimonials]
-    enable = true
-    title = "Friends of the lab"
+# Testimonials section
+# I edited partials/testimonials.html to remove the quotes and change this to a friends-of-lab section.
+# Due to this, we add urls with html code (<a href=""></a>). See Below
+# All images need to be square (e.g. 400 x 400) or the spacing of the page will be messed up
+# Also, seems finicky to the length of text. May need to use abbreviations for names/affiliations.
+[params.testimonials]
+enable = true
+title = "Friends of the lab"
 
-    [[params.testimonials.item]]
-      person = '<a href="">Jim Coan</a><br> University of Virginia'
-      img = "jimcoan.jpeg"
-      alt = "Person1"
-      url = "https://jamescoan.com/"
-      
-    [[params.testimonials.item]]
-      person = '<a href="">Emily Butler</a><br> University of Arizona'
-      img = "butler.jpeg"
-      alt = "Person2"
-      url = "https://cals.arizona.edu/fcs/faculty/emily_butler"
+[[params.testimonials.item]]
+person = '<a href="https://jamescoan.com/">Jim Coan</a><br> University of Virginia'
+img = "jimcoan.jpeg" 
+alt = "jimcoan" # This is just text that gets displayed if the img file fails to load
 
-    [[params.testimonials.item]]
-      person = '<a href="">Maria Koptjesvakaja-Tamm</a><br> Stockholm University'
-      img = "tamm.jpeg"
-      alt = "Person2"
-      url = "https://www.su.se/english/profiles/tamm-1.182300"
-      
-    [[params.testimonials.item]]
-      person = '<a href="">Brian Nosek</a><br> University of Virginia<br>Center for Open Science'
-      img = "nosek.jpeg"
-      alt = "Person3"
-      url = "https://www.projectimplicit.net/nosek/"
+[[params.testimonials.item]]
+person = '<a href="https://cals.arizona.edu/fcs/faculty/emily_butler">Emily Butler</a><br> University of Arizona'
+img = "butler.jpeg"
+alt = "butler"
 
-    [[params.testimonials.item]]
-      person = '<a href="">Julianne Holt-Lunstad</a><br> Brigham Young University'
-      img = "holtlunstad.jpeg"
-      alt = "Person4"
-      url = "http://julianneholtlunstad.byu.edu/"
-      
-    [[params.testimonials.item]]
-      person = '<a href="">Fred Hasselman</a><br>Radboud University Nijmegen'
-      img = "hasselman.jpg"
-      alt = "Person5"
-      link = "http://www.ru.nl/english/people/hasselman-f/"
+[[params.testimonials.item]]
+person = '<a href="https://www.su.se/english/profiles/tamm-1.182300">Maria Koptjesvakaja-Tamm</a><br> Stockholm University'
+img = "tamm.jpeg"
+alt = "tamm"
 
-    [[params.testimonials.item]]
-      person = '<a href="">Kate Ratliff</a><br>University of Florida'
-      img = "ratliff.jpeg"
-      alt = "Person6"
-      link = "http://www.kateratliff.com/"
+[[params.testimonials.item]]
+person = '<a href="http://julianneholtlunstad.byu.edu/">Julianne Holt-Lunstad</a><br> Brigham Young University'
+img = "holtlunstad.jpeg"
+alt = "holtlunstad"
 
-    [[params.testimonials.item]]
-      person = '<a href="">The Psychological Science Accelerator</a><br>Worldwide Collaboration'
-      img = "psa.png"
-      alt = "Person7"
-      link = "https://psysciacc.org/"
-    
-    [[params.testimonials.item]]
-      person = '<a href="">Charlie Ebersole</a><br>University of Virginia'
-      img = "ebersole.jpg"
-      alt = "Person8"
-      link = "https://psychology.as.virginia.edu/people/profile/cre2am"
-      
-    [[params.testimonials.item]]
-      person = '<a href="">Jaap Denissen</a><br>Tilburg University'
-      img = "denissen.jpg"
-      alt = "Person9"
-      link = "https://www.tilburguniversity.edu/webwijs/show/j.j.a.denissen.htm"
+[[params.testimonials.item]]
+person = '<a href="http://www.ru.nl/english/people/hasselman-f/">Fred Hasselman</a><br>Radboud University Nijmegen'
+img = "hasselman.jpg"
+alt = "hasselman"
 
-    [[params.testimonials.item]]
-      person = '<a href="">Sigi Lindenberg</a><br>Rijksuniversiteit Groningen'
-      img = "lindenberg.jpeg"
-      alt = "Person10"
-      link = "http://lindenberg.academiaworks.com/"
-      
-    [[params.testimonials.item]]
-      person = '<a href="">Michelangelo Vianello</a><br>University of Padova'
-      img = "vianello.jpeg"
-      alt = "Person11"
-      link = "https://sites.google.com/site/michelangelovianello/"
-      
-    [[params.testimonials.item]]
-      person = '<a href="">Alan Fiske</a><br>University of California, Los Angeles'
-      img = "fiske.jpg"
-      alt = "Person12"
-      link = "https://www.anthro.ucla.edu/faculty/alan-page-fiske"
-      
-    [[params.testimonials.item]]
-      person = '<a href="">Ivan Ropovik</a><br>University of Presov'
-      img = "ropovik.jpg"
-      alt = "Person13"
-      link = "http://www.unipo.sk/pedagogicka-fakulta/katedry/kpepp/ropovik"
+[[params.testimonials.item]]
+person = '<a href="http://www.kateratliff.com/">Kate Ratliff</a><br>University of Florida'
+img = "ratliff.jpeg"
+alt = "ratliff"
+
+[[params.testimonials.item]]
+person = '<a href="https://psysciacc.org/">Psych Science Accelerator</a><br>Worldwide Collaboration'
+img = "psa.png"
+alt = "psa"
+
+[[params.testimonials.item]]
+person = '<a href="https://psychology.as.virginia.edu/people/profile/cre2am">Charlie Ebersole</a><br>University of Virginia'
+img = "ebersole.jpg"
+alt = "ebersole"
+
+[[params.testimonials.item]]
+person = '<a href="https://www.tilburguniversity.edu/webwijs/show/j.j.a.denissen.htm">Jaap Denissen</a><br>Tilburg University'
+img = "denissen.jpg"
+alt = "denissen"
+
+[[params.testimonials.item]]
+person = '<a href="http://lindenberg.academiaworks.com/">Sigi Lindenberg</a><br>Rijksuniversiteit Groningen'
+img = "lindenberg.jpeg"
+alt = "lindenberg"
+
+[[params.testimonials.item]]
+person = '<a href="https://sites.google.com/site/michelangelovianello/">Michelangelo Vianello</a><br>University of Padova'
+img = "vianello.jpeg"
+alt = "vianello"
+
+[[params.testimonials.item]]
+person = '<a href="https://www.anthro.ucla.edu/faculty/alan-page-fiske">Alan Fiske</a><br>University of California, LA'
+img = "fiske.jpg"
+alt = "fiske"
+
+[[params.testimonials.item]]
+person = '<a href="http://www.unipo.sk/pedagogicka-fakulta/katedry/kpepp/ropovik">Ivan Ropovik</a><br>University of Presov'
+img = "ropovik.jpg"
+alt = "ropovik"
+
+[[params.testimonials.item]] #Layout doesn't like the second line of affiliiations, so Brian has to come last.
+person = '<a href="https://www.projectimplicit.net/nosek/">Brian Nosek</a><br>University of Virginia<br>Center for Open Science'
+img = "nosek.jpeg"
+alt = "nosek"
       
   # Services section
   # Note: The description lengths below need to be roughly equal or the formatting will get messed up.
